--- a/index.html
+++ b/index.html
@@ -5,11 +5,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DZ_5W Olek</title>
+    <link
+        href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./assets/public/index.css">
 </head>
 
 <body>
     <section class="app">
-        
+
+        <!-- HEADER -->
+        <div class="header">
+            <div class="header__todolist">
+                <p>
+                    todo-list
+                </p>
+            </div>
+
+            <div class="header__img">
+                <img src="./assets/public/img/ico.png" alt="">
+            </div>
+        </div>
+        <!-- / HEADER -->
+
+
+
+
+        <!-- RESULT -->
+        <div class="results__box">
+            <div class="result total">
+                <p>
+                    total:
+                    <span>
+                        3
+                    </span>
+                </p>
+            </div>
+            <div class="result success">
+                <p>
+                    success:
+                    <span>
+                        0
+                    </span>
+                </p>
+            </div>
+            <div class="result pending">
+                <p>
+                    pending:
+                    <span>
+                        3
+                    </span>
+                </p>
+            </div>
+        </div>
+        <!-- / RESULT -->
+
+
+
+
+        <!-- FILTER -->
+        <div class="filter__box">
+            <div class="filter">
+                <p>
+                    Filter
+                </p>
+            </div>
+            <div class="img">
+                <img src="./assets/public/img/arrow.png" alt="">
+            </div>
+        </div>
+        <!-- / FILTER -->
+
     </section>
     <!-- /.app -->
 </body>
