add info, fixed filter

--- a/index.html
+++ b/index.html
@@ -70,12 +70,111 @@
                     Filter
                 </p>
             </div>
-            <div class="img">
+            <button class="btn-img">
                 <img src="./assets/public/img/arrow.png" alt="">
-            </div>
+            </button>
         </div>
         <!-- / FILTER -->
 
+
+
+
+        <!-- INFORM -->
+        <ul class="inform">
+            <li class="inform-item">
+                <div class="inform-item__task">
+                    Standup meeting with the team @5pm
+                </div>
+
+                <div class="inform-item__priority">
+                    <div class="inform-item__priority-color color1"></div>
+                    Low Priority
+                </div>
+
+                <div class="inform-item__mark">
+                    <img src="./assets/public/img/mark.png" alt="mark">
+                </div>
+
+                <div class="inform-item__date">
+                    Jul 10
+                </div>
+
+                <input type="checkbox" class="inform-item__checkbox">
+
+                <button class="inform-item__delete-img">
+                    <img src="./assets/public/img/delete-img.png" alt="delete-img">
+                </button>
+            </li>
+
+
+            <li class="inform-item">
+                <div class="inform-item__task">
+                    Order pizza for Granny tonight
+                </div>
+
+                <div class="inform-item__priority">
+                    <div class="inform-item__priority-color color2"></div>
+                    High Priority
+                </div>
+
+                <div class="inform-item__mark">
+                    <img src="./assets/public/img/mark.png" alt="mark">
+                </div>
+
+                <div class="inform-item__date">
+                    Jul 10
+                </div>
+
+                <input type="checkbox" class="inform-item__checkbox">
+
+                <button class="inform-item__delete-img">
+                    <img src="./assets/public/img/delete-img.png" alt="delete-img">
+                </button>
+            </li>
+
+
+            <li class="inform-item">
+                <div class="inform-item__task">
+                    Design, Develop and Deploy Apps to Netlify for Clients
+                </div>
+
+                <div class="inform-item__priority">
+                    <div class="inform-item__priority-color color3"></div>
+                    Medium Priority
+                </div>
+
+                <div class="inform-item__mark">
+                    <img src="./assets/public/img/mark.png" alt="mark">
+                </div>
+
+                <div class="inform-item__date">
+                    Jul 10
+                </div>
+
+                <input type="checkbox" class="inform-item__checkbox">
+
+                <button class="inform-item__delete-img">
+                    <img src="./assets/public/img/delete-img.png" alt="delete-img">
+                </button>
+            </li>
+        </ul>
+        <!-- / INFO -->
+
+
+
+
+        <!-- FOOTER -->
+        <div class="footer">
+            <div class="footer__btn-clear">
+                Clear All
+                <img src="./assets/public/img/delete-img.png" alt="">
+            </div>
+
+            <div class="footer__add-new">
+                Add New
+            </div>
+        </div>
+        <!-- / FOOTER -->
     </section>
     <!-- /.app -->
 </body>
