fixed btn-clear, add-new

--- a/index.html
+++ b/index.html
@@ -65,13 +65,9 @@
 
         <!-- FILTER -->
         <div class="filter__box">
-            <div class="filter">
-                <p>
-                    Filter
-                </p>
-            </div>
+            <input class="filter" placeholder="filter">
             <button class="btn-img">
-                <img src="./assets/public/img/arrow.png" alt="">
+                <img src="./assets/public/img/arrow.png" alt="arrow">
             </button>
         </div>
         <!-- / FILTER -->
@@ -91,9 +87,9 @@
                     Low Priority
                 </div>
 
-                <div class="inform-item__mark">
+                <button class="inform-item__mark">
                     <img src="./assets/public/img/mark.png" alt="mark">
-                </div>
+                </button>
 
                 <div class="inform-item__date">
                     Jul 10
@@ -117,9 +113,9 @@
                     High Priority
                 </div>
 
-                <div class="inform-item__mark">
+                <button class="inform-item__mark">
                     <img src="./assets/public/img/mark.png" alt="mark">
-                </div>
+                </button>
 
                 <div class="inform-item__date">
                     Jul 10
@@ -143,9 +139,9 @@
                     Medium Priority
                 </div>
 
-                <div class="inform-item__mark">
+                <button class="inform-item__mark">
                     <img src="./assets/public/img/mark.png" alt="mark">
-                </div>
+                </button>
 
                 <div class="inform-item__date">
                     Jul 10
@@ -165,14 +161,14 @@
 
         <!-- FOOTER -->
         <div class="footer">
-            <div class="footer__btn-clear">
+            <button class="footer__btn-clear">
                 Clear All
                 <img src="./assets/public/img/delete-img.png" alt="">
-            </div>
+            </button>
 
-            <div class="footer__add-new">
+            <button class="footer__add-new">
                 Add New
-            </div>
+            </button>
         </div>
         <!-- / FOOTER -->
     </section>
